name:                md-html-indexer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Gelio/haskell-md-html-indexer#readme
license:             BSD3
license-file:        LICENSE
author:              Grzegorz Rozdzialik
maintainer:          voreny.gelio@gmail.com
copyright:           2018 Grzegorz Rozdzialik
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable md-html-indexer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, conduit, conduit-extra, optparse-applicative, http-conduit, html-conduit, bytestring, transformers, xml-types, text, markdown, filepath
