name:                md-html-indexer
version:             0.1.0.0
synopsis:            HTML and Markdown indexer
description:         HTML and Markdown indexer. Supports indexing network and filesystem resources,
                     as well as executing commands on found resources. Processes data as streams and
                     runs concurrently.
homepage:            https://github.com/Gelio/haskell-md-html-indexer#readme
license:             BSD3
license-file:        LICENSE
author:              Grzegorz Rozdzialik
maintainer:          voreny.gelio@gmail.com
copyright:           2018 Grzegorz Rozdzialik
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      library
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    , conduit
    , conduit-extra
    , http-conduit
    , html-conduit
    , bytestring
    , xml-types
    , text
    , markdown
    , filepath

  exposed-modules:
    HeadingExtract
    HeadingExtract.Types
    HeadingExtract.Network
    HeadingExtract.File
    HeadingExtract.Exception
    HeadingExtract.Internal.HTML
    HeadingExtract.Internal.Markdown

  ghc-options: -Wall

executable md-html-indexer
  hs-source-dirs:      executable
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    , conduit
    , optparse-applicative
    , text
    , process
    , containers
    , md-html-indexer

  other-modules:
    Index
    IndexerOptions
    Search
    Exception
    Concurrent

  ghc-options: -Wall -threaded

test-suite md-html-indexer-tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  default-language:    Haskell2010
  hs-source-dirs:
    tests
  build-depends: base >= 4.7 && < 5
    , HUnit
  other-modules:
  ghc-options: -Wall



